@@ -71,6 +71,8 @@
 50. Use Humanity/gnome icons for Windows and Mac builds.
 51. Add a uninstall target for Linux builds.
 52. Add 'Append Random Album' option to library, jamendo, and magnatune pages.
+53. Don't use KWallet for MPD password - it's overkill, as MPD password is sent
+    in plain text!
 
 1.5.2
 -----
